<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="version">版本号：Alpha 1.5</string>
    <string name="app_name">O2O配送</string>
    
    <string name="action_settings">Settings</string>
    <string name="delivery_scan">配送扫描</string>
    <string name="overtime_scan">超时扫描</string>
    <string name="log">日志记录</string>
    <string name="logout">退出</string>
    <string name="title_activity_delivery">DeliveryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_overtime">OvertimeActivity</string>
    <string name="title_activity_log">LogActivity</string>

    <string name="biz_main_exit_title">退出提示</string>
    <string name="biz_main_exit_message">您确定要退出么？</string>
    
    <string name="biz_main_dialog_ip_title">输入iP地址</string>
    <string name="biz_main_dialog_pwd_title">输入密码</string>
    <string name="biz_main_dialog_pwd_error">密码错误</string>
	<string name="biz_main_dialog_newip_tip">更新后的地址是：\n%s</string>
    
    <string name="positive">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">返回</string>
    
    <string name="tip_order">配送单号：</string>
    <string name="tip_box">配送柜号：</string>
    <string name="deliver_error_tip">错误信息：</string>
    <string name="scan_order">配送单扫描</string>
    <string name="scan_box">配送柜扫描</string>
    <string name="unpacking">开箱</string>
    <string name="timeout">超时开箱</string>
    
    <string name="openbox_success">配送开箱成功</string>
    <string name="overtime_openbox_success">超时取回开箱成功</string>
    
    <string name="scan_box_tip">配送柜号</string>
    <string name="scan_order_tip">配送单号</string>
    
    <string name="open_box_message">正在开箱...</string>
    
    <string name="activity_title_open_box">开箱</string>
    <string name="activity_title_overtime_open_box">超时开箱</string>
    <string name="activity_title_login">登录</string>
    <string name="activity_title_main">O2O配送客户端</string>
    
    <string name="toast_deliveryno_empty">请扫描或输入配送单号</string>
    <string name="toast_boxno_empty">请扫描或输入配送柜号</string>
    
    <string name="network_error_tip">请检查网络连接状况</string>
    
</resources>