<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/delivery"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_button_height"
                android:layout_weight="1"
                android:textSize="@dimen/activity_main_button_textsize"
                android:text="@string/delivery_scan" />

            <Button
                android:id="@+id/overtime"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_button_height"
                android:layout_weight="1"
                android:textSize="@dimen/activity_main_button_textsize"
                android:text="@string/overtime_scan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/log"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_button_height"
                android:textSize="@dimen/activity_main_button_textsize"
                android:layout_weight="1"
                android:text="@string/log" />

            <Button
                android:id="@+id/logout"
                android:layout_width="0dp"
               	android:layout_height="@dimen/activity_main_button_height"
                android:layout_weight="1"
                android:textSize="@dimen/activity_main_button_textsize"
                android:text="@string/logout" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>